--- a/index.html
+++ b/index.html
@@ -8,40 +8,38 @@
     
     <body>
         <!-- Add a title and edit the opening of your story. -->
-        <div class="title"> Put title of your story </div>
+        <div class="title"> Lucas The Jumping Spider</div>
         <div class="story-opening">
-            <img src="https://cdn.glitch.global/9d066a26-dbcb-4aa3-b1af-3cd59e251b0c/placeholder.jpeg?v=1657576139439">
-            <h1>Put opening message of your story</h1>
+            <h2>You spot a teeny, fuzzy spider on the counter. It blinks at you with its cute round eyes.  Do you...</h2>
         </div>
 
         <!-- Change the text of the buttons to the options relevant to your story. -->
         <div class="buttons">
-            <button class="option-one">Option 1</button>
-            <button class="option-two">Option 2</button>
+            <button class="option-one"> offer it a snack </button>
+            <button class="option-two">take it outside</button>
         </div>
 
         <!-- Put the part of the story the user will see if they picked option one. -->
         <div class="option-one-screen">
-            <h1>Put the second part of your story based on if they chose option 1</h1>
-            <img src="https://cdn.glitch.global/9d066a26-dbcb-4aa3-b1af-3cd59e251b0c/placeholder.jpeg?v=1657576139439">
-        </div>
+            <h1>You put a piece of your sandwitch and leave it on the counter. </h1>        </div>
 
         <!-- Put the part of the story the user will see if they picked option two. -->
         <div class="option-two-screen">
-            <h1>Put the second part of your story based on if they chose option 2 </h1>
-            <img src="https://cdn.glitch.global/9d066a26-dbcb-4aa3-b1af-3cd59e251b0c/placeholder.jpeg?v=1657576139439">
+            <h1>carefully trap it under a glass, and scoop it up outside </h1>
         </div>
+
+
 
         <!--Put the end of the story if the user chose option 1.-->
         <div class="option-one-end">
-            <h1>Put final part of your story based on if they chosen option 1 at the beginning </h1>
-            <img src="https://cdn.glitch.global/9d066a26-dbcb-4aa3-b1af-3cd59e251b0c/placeholder.jpeg?v=1657576139439">
+            <h1> Lucas goes boing boing he is soo happy </h1>
+            <img src="https://storage.gra.cloud.ovh.net/v1/AUTH_728ab22ba0c842468a897907be9a7075/flipanim/anim/gx6s3lkb.gif">
         </div>
 
         <!-- Put the end of the story if the user chose option 2.-->
         <div class="option-two-end">
-            <h1>Put final part of your story based on if they chosen option 2 at the beginning </h1>
-            <img src="https://cdn.glitch.global/9d066a26-dbcb-4aa3-b1af-3cd59e251b0c/placeholder.jpeg?v=1657576139439">
+            <h1> Lucas is happy in nature</h1>
+            <img src="https://storage.gra.cloud.ovh.net/v1/AUTH_728ab22ba0c842468a897907be9a7075/flipanim/anim/t958sl4i.gif">
         </div>
     </body>
 </html>
