lucas the spider

--- a/index.html
+++ b/index.html
@@ -1,45 +1,44 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <title>Unit 3 Project Starter Code</title>
-    </head>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>The Jumping Spider</title>
     <link rel="stylesheet" href="style.css">
     <script defer src="script.js"></script>
-    
-    <body>
-        <!-- Add a title and edit the opening of your story. -->
-        <div class="title"> Lucas The Jumping Spider</div>
-        <div class="story-opening">
-            <h2>You spot a teeny, fuzzy spider on the counter. It blinks at you with its cute round eyes.  Do you...</h2>
-        </div>
+</head>
+<body>
+    <div class="title">The Jumping Spider</div>
+    <div class="story-opening">
+         <img src="https://storage.gra.cloud.ovh.net/v1/AUTH_728ab22ba0c842468a897907be9a7075/flipanim/anim/2xqez9sn.gif">
+        <h1>You spot a teeny, fuzzy spider on the counter. It blinks at you with its cute round eyes. Do you... </h1>
+    </div>
 
-        <!-- Change the text of the buttons to the options relevant to your story. -->
-        <div class="buttons">
-            <button class="option-one"> offer it a snack </button>
-            <button class="option-two">take it outside</button>
-        </div>
+    <div class="buttons">
+        <button class="option-one">Offer it a snack</button>
+        <button class="option-two">Take it outside</button>
+    </div>
 
-        <!-- Put the part of the story the user will see if they picked option one. -->
-        <div class="option-one-screen">
-            <h1>You put a piece of your sandwitch and leave it on the counter. </h1>        </div>
+    <div class="option-one-screen">
+        <h1>You put a piece of your sandwich on the counter.</h1>
+        <img src="https://storage.gra.cloud.ovh.net/v1/AUTH_728ab22ba0c842468a897907be9a7075/flipanim/anim/5p37tskw.gif" alt="Spider happy">
+        <button class="option-one-continue">Continue</button>
+    </div>
 
-        <!-- Put the part of the story the user will see if they picked option two. -->
-        <div class="option-two-screen">
-            <h1>carefully trap it under a glass, and scoop it up outside </h1>
-        </div>
+    <div class="option-two-screen">
+        <h1>You carefully trap it under a glass and scoop it up outside.</h1>
+        <img src="https://storage.gra.cloud.ovh.net/v1/AUTH_728ab22ba0c842468a897907be9a7075/flipanim/anim/c2idyaub.gif" alt="Spider outside">
+        <button class="option-two-continue">Continue</button>
+    </div>
 
+    <div class="option-one-end">
+        <h1>The end! You made the spider happy!!</h1>
+        <img src="https://storage.gra.cloud.ovh.net/v1/AUTH_728ab22ba0c842468a897907be9a7075/flipanim/anim/gx6s3lkb.gif" alt="Spider happy">
+    </div>
 
-
-        <!--Put the end of the story if the user chose option 1.-->
-        <div class="option-one-end">
-            <h1> Lucas goes boing boing he is soo happy </h1>
-            <img src="https://storage.gra.cloud.ovh.net/v1/AUTH_728ab22ba0c842468a897907be9a7075/flipanim/anim/gx6s3lkb.gif">
-        </div>
-
-        <!-- Put the end of the story if the user chose option 2.-->
-        <div class="option-two-end">
-            <h1> Lucas is happy in nature</h1>
-            <img src="https://storage.gra.cloud.ovh.net/v1/AUTH_728ab22ba0c842468a897907be9a7075/flipanim/anim/t958sl4i.gif">
-        </div>
-    </body>
+    <div class="option-two-end">
+        <h1>You released the spider outside your porch and watched it scurry away into the grass</h1>
+        <img src="https://storage.gra.cloud.ovh.net/v1/AUTH_728ab22ba0c842468a897907be9a7075/flipanim/anim/t958sl4i.gif" alt= "Spider outside"
+    </div>
+   </body>
 </html>
